# quant-packaging

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: README.md  simple_example.py  strategy_packaging_demo.ipynb
quant_packaging/: __init__.py  container.py  docker_builder.py  packager.py
